Removed school URL and added default text

--- a/DATCCanvasAPIApp/App.config
+++ b/DATCCanvasAPIApp/App.config
@@ -14,7 +14,7 @@
                 <value>No Access Token</value>
             </setting>
             <setting name="InstructureSite" serializeAs="String">
-                <value>https://weber.instructure.com</value>
+                <value>No URL saved</value>
             </setting>
         </CanvasAPIApp.Properties.Settings>
     </userSettings>
