--- a/DATCCanvasAPIApp/App.config
+++ b/DATCCanvasAPIApp/App.config
@@ -16,6 +16,21 @@
             <setting name="InstructureSite" serializeAs="String">
                 <value>No URL saved</value>
             </setting>
+            <setting name="MongoDBUserName" serializeAs="String">
+                <value>No User Name Saved</value>
+            </setting>
+            <setting name="MongoDBPW" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="MongoDBGradingCollection" serializeAs="String">
+                <value>No Collection Selected</value>
+            </setting>
+            <setting name="MongoDBConnectionString" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="MongoDBDefaultDB" serializeAs="String">
+                <value />
+            </setting>
         </CanvasAPIApp.Properties.Settings>
     </userSettings>
   <runtime>
