--- a/DATCCanvasAPIApp/packages.config
+++ b/DATCCanvasAPIApp/packages.config
@@ -1,5 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DnsClient" version="1.3.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
+  <package id="MongoDB.Bson" version="2.11.4" targetFramework="net452" />
+  <package id="MongoDB.Driver" version="2.11.4" targetFramework="net452" />
+  <package id="MongoDB.Driver.Core" version="2.11.4" targetFramework="net452" />
+  <package id="MongoDB.Libmongocrypt" version="1.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="SharpCompress" version="0.23.0" targetFramework="net452" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net452" />
 </packages>
