Added check box write and delete to MongoDB.

--- a/DATCCanvasAPIApp/App.config
+++ b/DATCCanvasAPIApp/App.config
@@ -23,12 +23,15 @@
                 <value />
             </setting>
             <setting name="MongoDBGradingCollection" serializeAs="String">
-                <value>No Collection Selected</value>
+                <value />
             </setting>
             <setting name="MongoDBConnectionString" serializeAs="String">
                 <value />
             </setting>
             <setting name="MongoDBDefaultDB" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AppUserName" serializeAs="String">
                 <value />
             </setting>
         </CanvasAPIApp.Properties.Settings>
