Framework update to 4.7.2. Published Revision 23.

--- a/DATCCanvasAPIApp/App.config
+++ b/DATCCanvasAPIApp/App.config
@@ -1,12 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="CanvasAPIApp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="CanvasAPIApp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
     <userSettings>
         <CanvasAPIApp.Properties.Settings>
@@ -20,27 +20,27 @@
                 <value>No User Name Saved</value>
             </setting>
             <setting name="MongoDBPW" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="MongoDBGradingCollection" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="MongoDBConnectionString" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="MongoDBDefaultDB" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="AppUserName" serializeAs="String">
-                <value />
+                <value/>
             </setting>
         </CanvasAPIApp.Properties.Settings>
     </userSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
