in the last commit I renamed a misspelled file without adding it back to the solution or something, it should be fine now

--- a/DATCCanvasAPIApp/DTCCanvasAPIApp.csproj
+++ b/DATCCanvasAPIApp/DTCCanvasAPIApp.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Course.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="EncryptAccessToken.cs" />
     <Compile Include="MongoDBForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -170,7 +171,6 @@
     <Compile Include="CoursesForm.Designer.cs">
       <DependentUpon>CoursesForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="EncriptAccessToken.cs" />
     <Compile Include="GradingQueue.cs">
       <SubType>Form</SubType>
     </Compile>
