Added app.manifest and edited security options to partial trust.

--- a/DATCCanvasAPIApp/DTCCanvasAPIApp.csproj
+++ b/DATCCanvasAPIApp/DTCCanvasAPIApp.csproj
@@ -72,6 +72,12 @@
   <PropertyGroup>
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
+  </PropertyGroup>
+  <PropertyGroup>
+    <TargetZone>Internet</TargetZone>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="DnsClient, Version=1.3.1.0, Culture=neutral, PublicKeyToken=4574bb5573c51424, processorArchitecture=MSIL">
       <HintPath>..\packages\DnsClient.1.3.1\lib\net45\DnsClient.dll</HintPath>
@@ -266,6 +272,7 @@
       <DependentUpon>SimpleTextBox.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
+    <None Include="Properties\app.manifest" />
     <None Include="Properties\DataSources\Assignment.datasource" />
     <None Include="Properties\DataSources\GradingQueue.datasource" />
     <None Include="Properties\DataSources\SubmissionVersion.datasource" />
