adding custom priority form, more details in pull request

--- a/DATCCanvasAPIApp/App.config
+++ b/DATCCanvasAPIApp/App.config
@@ -20,19 +20,28 @@
                 <value>No User Name Saved</value>
             </setting>
             <setting name="MongoDBPW" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="MongoDBGradingCollection" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="MongoDBConnectionString" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="MongoDBDefaultDB" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="AppUserName" serializeAs="String">
-                <value/>
+                <value />
+            </setting>
+            <setting name="Priority1Flags" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Priority2Flags" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Priority3Flags" serializeAs="String">
+                <value />
             </setting>
         </CanvasAPIApp.Properties.Settings>
     </userSettings>
