priority form with data grid table

--- a/DATCCanvasAPIApp/App.config
+++ b/DATCCanvasAPIApp/App.config
@@ -34,13 +34,7 @@
             <setting name="AppUserName" serializeAs="String">
                 <value />
             </setting>
-            <setting name="Priority1Flags" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="Priority2Flags" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="Priority3Flags" serializeAs="String">
+            <setting name="PriorityFlags" serializeAs="String">
                 <value />
             </setting>
         </CanvasAPIApp.Properties.Settings>
