--- a/DATCCanvasAPIApp/Properties/Settings.settings
+++ b/DATCCanvasAPIApp/Properties/Settings.settings
@@ -26,13 +26,7 @@
     <Setting Name="AppUserName" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="Priority1Flags" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="Priority2Flags" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="Priority3Flags" Type="System.String" Scope="User">
+    <Setting Name="PriorityFlags" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
