--- a/DATCCanvasAPIApp/App.config
+++ b/DATCCanvasAPIApp/App.config
@@ -37,6 +37,9 @@
             <setting name="PriorityFlags" serializeAs="String">
                 <value />
             </setting>
+            <setting name="DefaultPriority" serializeAs="String">
+                <value>5</value>
+            </setting>
         </CanvasAPIApp.Properties.Settings>
     </userSettings>
   <runtime>
