--- a/DATCCanvasAPIApp/Properties/Settings.settings
+++ b/DATCCanvasAPIApp/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="PriorityFlags" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="DefaultPriority" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">5</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
