--- a/DATCCanvasAPIApp/DTCCanvasAPIApp.csproj
+++ b/DATCCanvasAPIApp/DTCCanvasAPIApp.csproj
@@ -117,6 +117,7 @@
     <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -176,6 +177,13 @@
     <Compile Include="FireBaseAddForm.Designer.cs">
       <DependentUpon>FireBaseAddForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="RateLimitForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RateLimitForm.Designer.cs">
+      <DependentUpon>RateLimitForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="RateLimitTracker.cs" />
     <Compile Include="Requester.cs" />
     <Compile Include="SubmissionVersion.cs" />
     <Compile Include="CoursesForm.cs">
@@ -276,6 +284,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="HelpSimpleTextBox.resx">
       <DependentUpon>HelpSimpleTextBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RateLimitForm.resx">
+      <DependentUpon>RateLimitForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SimpleTextBox.resx">
       <DependentUpon>SimpleTextBox.cs</DependentUpon>
