--- a/DATCCanvasAPIApp/DTCCanvasAPIApp.csproj
+++ b/DATCCanvasAPIApp/DTCCanvasAPIApp.csproj
@@ -205,7 +205,7 @@
       <DependentUpon>PagesForm.cs</DependentUpon>
     </Compile>
     <Compile Include="GeneralAPIGets.cs" />
-    <Compile Include="QuizMethods.cs" />
+    <Compile Include="Quiz.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuizForm.cs">
@@ -281,7 +281,9 @@
       <DependentUpon>SimpleTextBox.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
-    <None Include="Properties\app.manifest" />
+    <None Include="Properties\app.manifest">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\DataSources\Assignment.datasource" />
     <None Include="Properties\DataSources\GradingQueue.datasource" />
     <None Include="Properties\DataSources\SubmissionVersion.datasource" />
