--- a/DATCCanvasAPIApp/DTCCanvasAPIApp.csproj
+++ b/DATCCanvasAPIApp/DTCCanvasAPIApp.csproj
@@ -214,6 +214,12 @@
     <Compile Include="GradingQueuePriorityForm.Designer.cs">
       <DependentUpon>GradingQueuePriorityForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="GroupEnrollmentForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GroupEnrollmentForm.Designer.cs">
+      <DependentUpon>GroupEnrollmentForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MongoDBForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -298,6 +304,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GradingQueuePriorityForm.resx">
       <DependentUpon>GradingQueuePriorityForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GroupEnrollmentForm.resx">
+      <DependentUpon>GroupEnrollmentForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MongoDBForm.resx">
       <DependentUpon>MongoDBForm.cs</DependentUpon>
