Remove log output for api request. Create form under help to show last error.

--- a/DATCCanvasAPIApp/App.config
+++ b/DATCCanvasAPIApp/App.config
@@ -40,6 +40,9 @@
             <setting name="DefaultPriority" serializeAs="String">
                 <value>5</value>
             </setting>
+            <setting name="LastErrorThrownOnRequest" serializeAs="String">
+                <value />
+            </setting>
         </CanvasAPIApp.Properties.Settings>
     </userSettings>
   <runtime>
