--- a/DATCCanvasAPIApp/Properties/Settings.settings
+++ b/DATCCanvasAPIApp/Properties/Settings.settings
@@ -32,5 +32,8 @@
     <Setting Name="DefaultPriority" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">5</Value>
     </Setting>
+    <Setting Name="LastErrorThrownOnRequest" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
